@@ -1,5 +1,5 @@
 #if !defined(lint) && !defined(__INSIGHT__)
-static char libbk__rcsid[] = "$Id: b_debug.c,v 1.7 2001/08/30 19:57:32 seth Exp $";
+static char libbk__rcsid[] = "$Id: b_debug.c,v 1.8 2001/09/11 13:47:54 dupuy Exp $";
 static char libbk__copyright[] = "Copyright (c) 2001";
 static char libbk__contact[] = "<projectbaka@baka.org>";
 #endif /* not lint */
@@ -54,7 +54,7 @@ struct bk_debug *bk_debug_init(bk_s B, bk_flags flags)
 
   if (!(ret = (struct bk_debug *)malloc(sizeof(*ret))))
   {
-    bk_error_printf(B, BK_ERR_ERR, __FUNCTION__/**/": Could not allocate debug structure: %s\n",strerror(errno));
+    bk_error_printf(B, BK_ERR_ERR, __FUNCTION__ ": Could not allocate debug structure: %s\n",strerror(errno));
     return(NULL);
   }
   memset(ret, 0, sizeof(*ret));
@@ -75,7 +75,7 @@ void bk_debug_destroy(bk_s B, struct bk_debug *bd)
 {
   if (!bd)
   {
-    bk_error_printf(B, BK_ERR_NOTICE, __FUNCTION__/**/": Invalid argument\n");
+    bk_error_printf(B, BK_ERR_NOTICE, __FUNCTION__ ": Invalid argument\n");
     return;
   }
 
@@ -120,7 +120,7 @@ u_int32_t bk_debug_query(bk_s B, struct bk_debug *bdinfo, const char *funname, c
 
   if (!bdinfo)
   {
-    bk_error_printf(B, BK_ERR_ERR, __FUNCTION__/**/": Invalid arguments\n");
+    bk_error_printf(B, BK_ERR_ERR, __FUNCTION__ ": Invalid arguments\n");
     return(0);
   }
 
@@ -151,13 +151,13 @@ int bk_debug_set(bk_s B, struct bk_debug *bdinfo, const char *name, u_int32_t le
 
   if (!bdinfo || !name)
   {
-    bk_error_printf(B, BK_ERR_ERR, __FUNCTION__/**/": Invalid arguments\n");
+    bk_error_printf(B, BK_ERR_ERR, __FUNCTION__ ": Invalid arguments\n");
     return(-1);
   }
 
   if (!bdinfo->bd_leveldb)
   {
-    bk_error_printf(B, BK_ERR_NOTICE, __FUNCTION__/**/": Debugging not configured yet\n");
+    bk_error_printf(B, BK_ERR_NOTICE, __FUNCTION__ ": Debugging not configured yet\n");
     return(-1);
   }
 
@@ -169,13 +169,13 @@ int bk_debug_set(bk_s B, struct bk_debug *bdinfo, const char *name, u_int32_t le
 
   if (!(node = malloc(sizeof(*node))))
   {
-    bk_error_printf(B, BK_ERR_ERR, __FUNCTION__/**/": Could not allocate memory to set debug level: %s\n",strerror(errno));
+    bk_error_printf(B, BK_ERR_ERR, __FUNCTION__ ": Could not allocate memory to set debug level: %s\n",strerror(errno));
     goto error;
   }
 
   if (!(node->bd_name = strdup(name)))
   {
-    bk_error_printf(B, BK_ERR_ERR, __FUNCTION__/**/": Could not strdup debug name %s: %s\n",name,strerror(errno));
+    bk_error_printf(B, BK_ERR_ERR, __FUNCTION__ ": Could not strdup debug name %s: %s\n",name,strerror(errno));
     goto error;
   }
 
@@ -183,7 +183,7 @@ int bk_debug_set(bk_s B, struct bk_debug *bdinfo, const char *name, u_int32_t le
 
   if (debug_insert(bdinfo->bd_leveldb, node) != DICT_OK)
   {
-    bk_error_printf(B, BK_ERR_ERR, __FUNCTION__/**/": Could not insert debug node for %s: %s\n",name, debug_error_reason(bdinfo->bd_leveldb, NULL));
+    bk_error_printf(B, BK_ERR_ERR, __FUNCTION__ ": Could not insert debug node for %s: %s\n",name, debug_error_reason(bdinfo->bd_leveldb, NULL));
     goto error;
   }
 
@@ -220,7 +220,7 @@ int bk_debug_setconfig(bk_s B, struct bk_debug *bdinfo, struct bk_config *config
 
   if (!bdinfo || !config || !program)
   {
-    bk_error_printf(B, BK_ERR_ERR, __FUNCTION__/**/": Invalid arguments\n");
+    bk_error_printf(B, BK_ERR_ERR, __FUNCTION__ ": Invalid arguments\n");
     return(-1);
   }
 
@@ -230,13 +230,13 @@ int bk_debug_setconfig(bk_s B, struct bk_debug *bdinfo, struct bk_config *config
 
     if (!(tokenized = bk_string_tokenize_split(B, value, 0, BK_WHITESPACE, NULL, BK_STRING_TOKENIZE_SIMPLE)))
     {
-      bk_error_printf(B, BK_ERR_WARN, __FUNCTION__/**/": Could not tokenize value %s\n",value);
+      bk_error_printf(B, BK_ERR_WARN, __FUNCTION__ ": Could not tokenize value %s\n",value);
       ret++;
       continue;
     }
     if (!tokenized[0] || !tokenized[1] || !tokenized[2])
     {
-      bk_error_printf(B, BK_ERR_WARN, __FUNCTION__/**/": Invalid number of tokens while parsing `%s'\n",value);
+      bk_error_printf(B, BK_ERR_WARN, __FUNCTION__ ": Invalid number of tokens while parsing `%s'\n",value);
       ret++;
       goto next;
     }
@@ -245,7 +245,7 @@ int bk_debug_setconfig(bk_s B, struct bk_debug *bdinfo, struct bk_config *config
 
     if (bk_string_atou(B, tokenized[2], &level, 0) < 0)
     {
-      bk_error_printf(B, BK_ERR_WARN, __FUNCTION__/**/": Invalid debugging level `%s' in `%s'\n",tokenized[2],value);
+      bk_error_printf(B, BK_ERR_WARN, __FUNCTION__ ": Invalid debugging level `%s' in `%s'\n",tokenized[2],value);
       ret++;
       goto next;
     }
@@ -254,7 +254,7 @@ int bk_debug_setconfig(bk_s B, struct bk_debug *bdinfo, struct bk_config *config
 
     if (bk_debug_set(B, bdinfo, tokenized[1], level) < 0)
     {
-      bk_error_printf(B, BK_ERR_ERR, __FUNCTION__/**/": Could not set debugging level for `%s'\n",value);
+      bk_error_printf(B, BK_ERR_ERR, __FUNCTION__ ": Could not set debugging level for `%s'\n",value);
       ret++;
       goto next;
     }
@@ -277,13 +277,13 @@ void bk_debug_config(bk_s B, struct bk_debug *bdinfo, FILE *fh, int sysloglevel,
 {
   if (!bdinfo)
   {
-    bk_error_printf(B, BK_ERR_ERR, __FUNCTION__/**/": Invalid arguments\n");
+    bk_error_printf(B, BK_ERR_ERR, __FUNCTION__ ": Invalid arguments\n");
     return;
   }
 
   if (!(bdinfo->bd_leveldb = debug_create((dict_function)debug_oo_cmp, (dict_function)debug_ko_cmp, DICT_HT_STRICT_HINTS, &debug_args)))
   {
-    bk_error_printf(B, BK_ERR_ERR, __FUNCTION__/**/": Could not creat debug queue: %s\n", debug_error_reason(NULL, NULL));
+    bk_error_printf(B, BK_ERR_ERR, __FUNCTION__ ": Could not creat debug queue: %s\n", debug_error_reason(NULL, NULL));
     return;
   }
 
@@ -307,7 +307,7 @@ void bk_debug_iprint(bk_s B, struct bk_debug *bdinfo, char *buf)
   
   if (!(funname = bk_fun_funname(B, 0, 0)))
   {
-    bk_error_printf(B, BK_ERR_NOTICE, __FUNCTION__/**/": Cannot determine function name\n");
+    bk_error_printf(B, BK_ERR_NOTICE, __FUNCTION__ ": Cannot determine function name\n");
     funname = "?";
   }
 
@@ -323,9 +323,10 @@ void bk_debug_iprint(bk_s B, struct bk_debug *bdinfo, char *buf)
     time_t curtime = time(NULL);
     struct tm *tm = localtime(&curtime);
 
-    if ((tmp = strftime(timeprefix, sizeof(timeprefix), "%m/%d %T", tm)) != 14)
+    /* XXX - this check should really be done with assert */
+    if ((tmp = strftime(timeprefix, sizeof(timeprefix), "%m/%d %H:%M:%S", tm)) != 14)
     {
-      bk_error_printf(B, BK_ERR_ERR, __FUNCTION__/**/": Somehow strftime produced %d bytes instead of the expected\n",tmp);
+      bk_error_printf(B, BK_ERR_ERR, __FUNCTION__ ": Somehow strftime produced %d bytes instead of the expected 14\n",tmp);
       return;
     }
 
@@ -354,7 +355,7 @@ void bk_debug_iprintf(bk_s B, struct bk_debug *bdinfo, char *format, ...)
 
   if (!bdinfo || !format)
   {
-    bk_error_printf(B, BK_ERR_ERR, __FUNCTION__/**/": Invalid argument\n");
+    bk_error_printf(B, BK_ERR_ERR, __FUNCTION__ ": Invalid argument\n");
     return;
   }
     
@@ -378,7 +379,7 @@ void bk_debug_iprintbuf(bk_s B, struct bk_debug *bdinfo, char *intro, char *pref
 
   if (!(out = bk_string_printbuf(B, intro, prefix, buf, 0)))
   {
-    bk_error_printf(B, BK_ERR_ERR, __FUNCTION__/**/": Could not convert buffer for debug printing\n");
+    bk_error_printf(B, BK_ERR_ERR, __FUNCTION__ ": Could not convert buffer for debug printing\n");
     return;
   }
 
@@ -397,7 +398,7 @@ void bk_debug_ivprintf(bk_s B, struct bk_debug *bdinfo, char *format, va_list ap
 
   if (!bdinfo || !format)
   {
-    bk_error_printf(B, BK_ERR_ERR, __FUNCTION__/**/": Invalid argument\n");
+    bk_error_printf(B, BK_ERR_ERR, __FUNCTION__ ": Invalid argument\n");
     return;
   }
     
