@@ -1,3 +1,7 @@
+2001-09-11    <dupuy@cs.columbia.edu>
+
+	* lib/b_debug.c (bk_debug_iprint): avoid Unix dependency here too
+
 2001-09-10  Alexander Dupuy  <dupuy@cs.columbia.edu>
 
 	* lib/b_error.c (be_error_output): avoid infinite recursion, Unix
